Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/XP_Rule__mdt/XP_Rule__mdt.object-meta.xml
<CustomObject>
    <label>XP Rule</label>
    <pluralLabel>XP Rules</pluralLabel>
</CustomObject>