Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/XP_Rule__mdt/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>