Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/XP_Rule__mdt/fields/Multiplier_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Conditions__c</fullName>
    <label>Multiplier Conditions</label>
    <type>Text</type>
    <length>255</length>
</CustomField>