Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/XP_Rule__mdt/fields/XP_Value__c.field-meta.xml
<CustomField>
    <fullName>XP_Value__c</fullName>
    <label>XP Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>